Navbar added with it's style

--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="navbar container">
+        <div class="logo">
+            <img src="assets/logo-navbar.png" alt="KV Logo" height="40">
+        </div>
+        <nav class="nav-menu">
+            <ul>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">How It Works</a></li>
+                <li><a href="#">Why It's Different</a></li>
+            </ul>
+        </nav>
+        <div class="nav-actions">
+            <button class="btn btn-primary">Get Early Access</button>
+        </div>
+    </header>
     
-    <main></main>
+    <main>
+
+    </main>
 
     </body>
 </html>
