--- a/index.html
+++ b/index.html
@@ -75,7 +75,36 @@
                 </div>
             </div>
         </section>
-        
+
+        <section class="second-brain-section container">
+            <div class="brain-image">
+                <img src="assets/knowledge.png" alt="Second Brain Diagram">
+            </div>
+            <div class="brain-content">
+                <span class="section-tag">THE SOLUTION</span>
+                <h2>Your Second Brain, <br> Structured By Design.</h2>
+                <p>Personal Knowledge Vault isn't another note-taking app. <br> It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                <ul class="brain-features">
+                    <li>
+                        <img src="assets/CheckCircle.png" alt="Check">
+                        <span>Capture ideas with structure built-in from day one</span>
+                    </li>
+                    <li>
+                        <img src="assets/CheckCircle.png" alt="Check">
+                        <span>Connect related concepts automatically as you write</span>
+                    </li>
+                    <li>
+                        <img src="assets/CheckCircle.png" alt="Check">
+                        <span>Build lasting knowledge through reflection prompts</span>
+                    </li>
+                    <li>
+                        <img src="assets/CheckCircle.png" alt="Check">
+                        <span>Find anything instantly with semantic search</span>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     </main>
 
     </body>
