Implemented Early Access Section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,20 @@
             </div>
         </section>
 
+        <section class="early-access-section container">
+            <div class="access-content">
+                <h2>Ready to Think More Clearly?</h2>
+                <p class="subtitle">Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.</p>
+                
+                <div class="access-action">
+                    <button class="btn btn-primary access-btn">
+                        Get Early Access <img src="assets/ArrowRight.png" alt="Arrow">
+                    </button>
+                    <p class="small-text">Free during early access • No credit card needed</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     </body>
