Added footer Section

--- a/index.html
+++ b/index.html
@@ -118,8 +118,24 @@
                 </div>
             </div>
         </section>
-
     </main>
-
-    </body>
+    <footer class="footer">
+        <div class="container footer-content">
+            <div class="footer-left">
+                <img src="assets/logo-footer.png" alt="KV Logo">
+            </div>
+            <div class="footer-right">
+                <span class="social-label">Social Links</span>
+                <div class="social-icons">
+                    <a href="#"><img src="assets/x.png" alt="Social"></a>
+                    <a href="#"><img src="assets/linkedin.png" alt="Social"></a>
+                    <a href="#"><img src="assets/facebook.png" alt="Social"></a>
+                </div>
+            </div>
+        </div>
+        <div class="container footer-bottom">
+            <p style="color: white;">&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
 </html>
